Increase z-index of header logo to fix it not being clickable

--- a/app/assets/stylesheets/strips.scss
+++ b/app/assets/stylesheets/strips.scss
@@ -121,6 +121,8 @@ header {
   .header_logo {
     margin: 12px 12px 0;
     display: inline-block;
+    position: relative;
+    z-index: 1;
   }
   a {
     display: block;
